# deploy_wizzard

./: .dockerignore  .gitignore  CLAUDE.md  Containerfile  Makefile  PLAN.md  README.md  SECURITY.md  alembic.ini  compose.yaml  entrypoint.sh  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  config.py  crypto.py  errors.py  logging_setup.py  main.py
app/api/: __init__.py  health.py  logs.py  mappings.py  settings.py  stats.py  wizard.py
app/clients/: __init__.py  base.py  catalyst.py  netbox.py  webhook.py
app/db/: __init__.py  models.py  session.py
app/services/: __init__.py  connections.py  day0.py  dayn.py  matching.py  settings_store.py  stats.py  suggest.py
docs/: runbook.md
docs/releases/: v1.0.0.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.4.0.md  v1.5.0.md  v1.6.0.md  v1.6.1.md  v1.6.2.md  v1.6.3.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts
tests/: conftest.py
tests/e2e/: helpers.ts  mobile.spec.ts  screenshots.mjs  serve-app.sh  serve-mocks.sh  settings.spec.ts  wizard.spec.ts
tests/integration/: conftest.py  test_polling_load.py  test_wizard_flow.py
tests/mocks/: ccc.py  ise.py  netbox.py  stack.py  state.py
tests/unit/: test_catalyst_client.py  test_crypto.py  test_day0_api.py  test_day0_payload.py  test_day0_service.py  test_day0_variables.py  test_dayn_resolver.py  test_dayn_service.py  test_error_visibility.py  test_health.py  test_matching.py  (+11 more)
(+24 files in other folders)
