[project]
name = "pnp-bridge"
version = "1.6.2"
description = "PnP Bridge: NetBox <-> Cisco Catalyst Center onboarding tool"
readme = "README.md"
license = { file = "LICENSE" }
# Target is Python 3.12 (Containerfile + CI); local floor is 3.11 — see PLAN.md P0 notes.
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "apscheduler>=3.10,<4",
    "cryptography>=43",
    "pydantic-settings>=2.4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["app"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true
